--- a/Game.csproj
+++ b/Game.csproj
@@ -96,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="All_Images.cs" />
+    <Compile Include="All_Sounds.cs" />
     <Compile Include="Game_Modes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
